--- a/src/locales/fr/landing.json
+++ b/src/locales/fr/landing.json
@@ -115,6 +115,11 @@
           "title": "Sumer testnet",
           "text": "Sumer is our tenth testnet, facilitating easy content uploads via our playback app.",
           "explore": "Explore Sumer"
+        },
+        "Giza": {
+          "title": "Giza testnet",
+          "text": "Sumer is our eleventh testnet, introducing V2 of the Storage and Distribution System.",
+          "explore": "Explore Giza"
         }
       }
     },
