--- a/src/locales/ru/landing.json
+++ b/src/locales/ru/landing.json
@@ -118,7 +118,7 @@
         },
         "Giza": {
           "title": "Giza testnet",
-          "text": "Sumer is our eleventh testnet, introducing V2 of the Storage and Distribution System.",
+          "text": "Giza is our eleventh testnet, introducing V2 of the Storage and Distribution System.",
           "explore": "Explore Giza"
         }
       }
