--- a/src/locales/es/token.json
+++ b/src/locales/es/token.json
@@ -5,10 +5,10 @@
       "description": "Los participantes en nuestras redes de prueba ahora pueden ganar Joystream Testnet Tokens (tJOYs) respaldados por moneda fiduciaria."
     },
     "hero": {
-      "title": "Comprender el token tJOY",
+      "title": "Comprendiendo el token tJOY",
       "text": "Los participantes en nuestras redes de prueba ahora pueden ganar Joystream Testnet Tokens (tJOYs) respaldados por moneda fiduciaria.",
       "tokenStats": {
-        "title": "Token en número",
+        "title": "El token en números",
         "exchangeRate": "Tipo de cambio",
         "backingValue": "Valor de respaldo",
         "supply": "Supply"
@@ -26,7 +26,7 @@
       },
       "purposeOfTJoy": {
         "title": "¿Cuál es el objetivo de tJOY?",
-        "text": "tJOY puede utilizarse en nuestras redes de prueba de la misma manera que los futuros usuarios de la plataforma Joystream podrán utilizar el token JOY de la red principal. Las tres funciones principales de tJOY son la estaca, la gobernanza y el pago.<0/><0/> Por ejemplo, para participar en las funciones de la testnet, los usuarios pueden necesitar estacar tJOY. Para crear propuestas de gobierno y votar a los miembros del Consejo, también se necesita tJOY. Por último, en la testnet, las recompensas y los KPI requieren tJOY para pagar a los contribuyentes efectivos."
+        "text": "tJOY puede utilizarse en nuestras redes de prueba de la misma manera que los futuros usuarios de la plataforma Joystream podrán utilizar el token JOY de la red principal. Las tres funciones principales de tJOY son el staking, la gobernanza y el pago.<0/><0/> Por ejemplo, para participar en las funciones de la testnet, los usuarios pueden necesitar stakear tJOY. Para crear propuestas de gobierno y votar a los miembros del Consejo, también se necesita tJOY. Por último, en la testnet, las recompensas y los KPI requieren tJOY para pagar a los contribuyentes efectivos."
       },
       "whereCanTJoyBeObtained": {
         "title": "¿Dónde puedo conseguir tJOY?",
@@ -41,7 +41,7 @@
         "text": "Utilizamos Bitcoin Cash (BCH) como vía de pago en nuestras redes de prueba. Usted puede cobrar tJOY haciendo una transferencia a la dirección dedicada a la quema: <0>5D5PhZQNJzcJXVBxwJxZcsutjKPqUPydrvpu6HeiBfMaeKQu</0> Antes de hacer esto, debe establecer el <0>memo</0> de la clave desde la que se realiza la transferencia a su dirección BCH. En el momento de la transferencia, el tipo de cambio de BCH a USD está bloqueado. <1/><1/>Puede encontrar más información sobre los pagos <2>aquí</2>."
       },
       "howToEarn": {
-        "title": "¿Cómo puedo ganar la JOY de mainnet?",
+        "title": "¿Cómo puedo ganar JOY de la mainnet?",
         "text": "Actualmente, la única manera de asegurar una asignación de JOY en la red principal es mediante contribuciones de alta calidad a la plataforma y a la comunidad a través de nuestro <0>Programa de Miembros Fundadores</0>."
       },
       "TJoyWorth": {
@@ -50,10 +50,10 @@
       }
     },
     "cashouts": {
-      "title": "Cobros pendientes",
+      "title": "Retiros pendientes",
       "subtitle": "Los tokens enviados a Jsgenesis en este intercambio se queman, por lo que el precio final del token no se ve afectado por dicho intercambio.",
       "cashout": {
-        "address": "Dirrección de rigen",
+        "address": "Dirrección de origen",
         "tokensTransferred": "Tokens transferidos",
         "usdValue": "Valor USD",
         "blockNumber": "Número de bloque",
