--- a/src/locales/es/sumer.json
+++ b/src/locales/es/sumer.json
@@ -1,7 +1,7 @@
 {
   "sumer": {
     "siteMetadata": {
-      "description": "Explora la testnet de Sumer"
+      "description": "Explora la testnet Sumer"
     },
     "hero": {
       "title": "Red Sumer",
