--- a/src/locales/es/sparta.json
+++ b/src/locales/es/sparta.json
@@ -1,40 +1,40 @@
 {
   "sparta": {
     "siteMetadata": {
-      "description": "Explora la testnet de Sparta"
+      "description": "Explora la testnet Sparta"
     },
     "hero": {
-      "title": "Red de Sparta",
-      "text": "Explora las funciones disponibles y elige la que más te convenga. Influya en el desarrollo de la plataforma y gana dinero real en el proceso.",
-      "chipText": "¿que es esto?"
+      "title": "Red Sparta",
+      "text": "Explora los roles disponibles y elige el que más te convenga. Influya en el desarrollo de la plataforma y gana dinero real en el proceso.",
+      "chipText": "¿Qué es esto?"
     },
     "heroCard": {
       "title": "NETWORK DOWN",
-      "markdown": "\n ### FALLO IDENTIFICADO\n\n  El viernes 29 de marzo, la red Sparta se cayó debido a un [error conocido en el sustrato](https://github.com/paritytech/substrate/pull/2130) que no habíamos retirado antes del lanzamiento..\n\n Puede encontrar más detalles en esta [entrada del blog](https://blog.joystream.org/sparta-sacked/)."
+      "markdown": "\n ### FALLO IDENTIFICADO\n\n  El viernes 29 de marzo, la red Sparta se cayó debido a un [error conocido en Substrate](https://github.com/paritytech/substrate/pull/2130) que no habíamos retirado antes del lanzamiento..\n\n Puede encontrar más detalles en esta [entrada del blog](https://blog.joystream.org/sparta-sacked/)."
     },
     "modal": {
       "title": "Casco de Esparta",
-      "text": "<0>El casco del ejército espartano</0> representa aquello por lo que Esparta es más conocida hoy en día, su poderío militar. Para su época, también era conocida por su avanzado sistema de gobierno."
+      "text": "<0>El casco del ejército Espartano</0> representa aquello por lo que Esparta es más conocida hoy en día, su poderío militar. Para su época, también era conocida por su avanzado sistema de gobierno."
     },
     "testnetGoals": {
       "title": "Objetivos de la testnet",
-      "subtitle": "Los objetivos que figuran a continuación son una representación simplificada de los resultados clave que figuran en nuestro comunicado OKR.",
+      "subtitle": "Los objetivos que figuran a continuación son una representación simplificada de los resultados clave que figuran en nuestro comunicado OKR (Objetivos y resultados clave).",
       "goals": {
         "blockchain": {
-          "title": "Construir y liberar una cadena de bloques con un Consejo que funcione",
-          "text": "Como \"plataforma mediática gobernada por los usuarios\" permitirles elegir <0>Miembros del Consejo</0> para que representen sus intereses en las operaciones diarias era un objetivo importante para nosotros."
+          "title": "Construir y lanzar una cadena de bloques con un Consejo funcional",
+          "text": "Como \"plataforma de medios gobernada por los usuarios\", permitir que escogiesen a los<0>Miembros del Consejo</0> para representar sus intereses en las operaciones diarias era un objetivo importante para nosotros."
         },
         "bugs": {
           "title": "Mantener la cantidad de errores más o menos críticos en un nivel aceptable",
-          "text": "Como puede observar la red se cayó, no alcanzamos nuestros objetivos en este caso."
+          "text": "Como lo demuestra el hecho de que la red se crasheó, en este caso no alcanzamos nuestros objetivos."
         }
       }
     },
     "roles": {
-      "title": "Roles disponibles en la red de pruebas de Sparta"
+      "title": "Roles disponibles en la red de pruebas Sparta"
     },
     "map": {
-      "title": "La ciudad de Sparta",
+      "title": "La ciudad de Esparta",
       "text": "<0>Esparta fue una importante ciudad-estado de la antigua Grecia.</0> Además de su poderío militar, también era única para su época y en comparación con sus rivales griegos debido a su definido sistema social y su constitución. <1/><1/>Elegimos el nombre de Esparta por su importancia histórica en el camino hacia la democracia y el estado de derecho, aunque sea draconiano para los estándares modernos."
     }
   }
