--- a/src/locales/es/about.json
+++ b/src/locales/es/about.json
@@ -25,7 +25,7 @@
     "ourTeam": {
       "title": "Nuestro equipo",
       "subtitle": "Venimos de diferentes continentes, pero compartimos la pasión por el código abierto, la tecnología blockchain, los sistemas distribuidos, la privacidad y la construcción de una nueva Internet basada en instituciones responsables y bifurcables.",
-      "moreMembers": "Cargar mas miembros del equipo"
+      "moreMembers": "Cargar más miembros del equipo"
     },
     "investors": {
       "title": "Nuestros inversionistas"
