Fixed JSON in founding-members

--- a/src/locales/ru/founding-members.json
+++ b/src/locales/ru/founding-members.json
@@ -15,7 +15,7 @@
       "howItWorks": "Как это работает.",
       "inputPlaceholder": "например, joedoe",
       "inductionDate": "Дата присоединения",
-      "joinOurDiscord": "в Discord"
+      "joinOurDiscord": "в Discord",
       "earnMorePoints": "Заработать больше очков?"
     },
     "scoringPeriod": {
