Fixed get-started JSON

--- a/src/locales/ru/get-started.json
+++ b/src/locales/ru/get-started.json
@@ -30,7 +30,7 @@
         "design": "Дизайн",
         "marketing": "Маркетинг",
         "research": "Исследования",
-        "contentCreation": "Создание контента"
+        "contentCreation": "Создание контента",
         "newcomers": "Новички",
         "content": "Контент",
         "documentation": "Документация",
