Fixed translation of Giza

--- a/src/locales/ru/giza.json
+++ b/src/locales/ru/giza.json
@@ -5,7 +5,7 @@
     },
     "hero": {
       "title": "Сеть Giza",
-      "text": "Кроме прочих запланированных улучшений, релиз Giza содержит первую итерацию системы хранения и доставки контента, которая будет использована в основной сети."
+      "text": "Наряду с другими запланированными улучшениями, в релиз Giza включена первая итерация системы хранения и доставки контента, которая будет использована в основной сети."
     },
     "criticalDocuments": {
       "title": "Важная документация",
@@ -24,11 +24,11 @@
       "goals": {
         "launchStorageAndDistribution": {
           "title": "Запуск 2-й версии системы хранения и доставки контента",
-          "text": "Наряду с другими изменениями, описанными в спецификации, этот запуск будет включать введение отдельных ролей хранения и распределения данных, равно как и поддержку избыточности и частичной репликации носителей на узлах."
+          "text": "Наряду с другими изменениями, описанными в спецификации, предполагается введение отдельных ролей для хранения и распределения данных, а также система хранения с резервированием и частичной репликацией носителей на узлах."
         },
         "contentDirectoryEnhancements": {
           "title": "Улучшения в каталоге контента",
-          "text": "В этом выпуске системы каталога контента улучшения будут сфокусированы на реализации определенных предложений сообщества, устранении технических недостатков и внедрении интеграции с новой системой хранения."
+          "text": "Улучшения системы каталога контента в этом релизе будут направлены на реализацию некоторых запланированных инициатив сообщества, устранение технических недостатков и интеграцию с новой системой хранения."
         },
         "newOperationsWorkingGroups": {
           "title": "Новые операционные рабочие группы",
@@ -41,7 +41,7 @@
     },
     "map": {
       "title": "Гиза",
-      "text": "<0>Район, расположенный на территории нынешней Гизы служил некрополем нескольких фараонов, правивших Древним Египтом во 2-м тысячелетии до нашей эры.</0> Три древних гробницы, построенные в форме гигантских пирамид, составляют потрясающий и всемирно известный комплекс пирамид Гизы.<1/><1/>Эти пирамиды служили символом Древнего Египта в западном представлении на протяжении сотен лет. Они были впервые \"популяризированы\" в Древней Греции, когда Великая пирамида была внесена Антипатром Сидонским в список семи чудес света.<1/><1/><2><0/> Читать в блоге</2>"
+      "text": "<0>Район, расположенный на территории нынешней Гизы, служил некрополем нескольких фараонов, правивших Древним Египтом во 2-м тысячелетии до нашей эры.</0> Три древних гробницы, построенных в форме гигантских пирамид, составляют потрясающий и всемирно известный комплекс пирамид Гизы.<1/><1/>Эти пирамиды служили символом Древнего Египта в западном представлении на протяжении сотен лет. Они были впервые \"популяризированы\" в Древней Греции, когда Великая пирамида была внесена Антипатром Сидонским в список семи чудес света.<1/><1/><2><0/> Читать в блоге</2>"
     }
   }
 }
